[package]
name = "fritz_guess"
description = "Fritz Workbook Toolset (fritz-guess): guesses the separator used by a csv file"
version = "0.1.0"
authors = ["Martijn M.W. Gribnau <garm@ilumeo.com>"]
license = "Apache-2.0"
edition = "2018"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]

[dependencies]
thiserror = "1.0.11"
rayon = { version = "1.3.0", optional = true, enable-default = true}

[dev-dependencies]
parameterized = "0.1.1"